--- a/certificates/cr7.html
+++ b/certificates/cr7.html
@@ -93,12 +93,12 @@
         <hr />
         <div class="col-sm-6 text-center">
           <p>CERTIFICATE ID NUMBER:</p>
-          <h5>C2232261 EN</h5>
+          <h5>M4SHK4W2BQQE</h5>
         </div>
 
         <div class="col-sm-6 text-center">
           <p>ISSUED ON:</p>
-          <h5>APRIL 10, 2020</h5>
+          <h5>JUNE 4, 2021</h5>
         </div>
       </div>
     </section>
