--- a/index.html
+++ b/index.html
@@ -144,10 +144,6 @@
           </button>
         </li>
       </ul>
-      <div class="about" id="about">
-        <h5>Collapsable side nav</h5>
-        <p>by Parham06</p>
-      </div>
       <div class="menuUser">
         <a href="#">
           <div>
@@ -156,7 +152,7 @@
               alt=""
             />
           </div>
-          <h5 class="Username menuText">Alex</h5>
+          <h5 class="Username menuText">Samarth</h5>
           <p class="menuText"><i class="fas fa-chevron-right"></i></p>
         </a>
         <div class="userInfo">
