--- a/certificates/cr-main.html
+++ b/certificates/cr-main.html
@@ -284,6 +284,6 @@
         $(".load__wrapper").fadeOut("slow");
       });
     </script>
-    <script src="js/mode.js"></script>
+    <script src="../js/mode.js"></script>
   </body>
 </html>
