--- a/index.html
+++ b/index.html
@@ -140,19 +140,30 @@
                  </a>
              </li>
              <li class="menuItem">
+                 <a  href="./certificates/cr-main.html" id="constantManagerBtn" class="menuOption">
+                     <i class="fas fa-border-all"></i><h5 class="menuText">Certificate</h5>
+                 </a>
+             </li>
+             <li class="menuItem">
                  <a  href="./gallery.html" id="constantManagerBtn" class="menuOption">
 
                  <i class="fas fa-border-all"></i><h5 class="menuText">Gallery</h5>
                   </a>
              </li>
+
              <li class="menuItem">
-                 <a  href="#" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Social Media</h5>
+                 <a  href="./music.html" id="constantManagerBtn" class="menuOption">
+                     <i class="fas fa-border-all"></i><h5 class="menuText">Music</h5>
                  </a>
              </li>
              <li class="menuItem">
-                 <a  href="#contact" id="constantManagerBtn" class="menuOption">
-                     <i class="fas fa-border-all"></i><h5 class="menuText">Social Media</h5>
+                 <a  href="#" id="constantManagerBtn" class="menuOption">
+                     <i class="fas fa-border-all"></i><h5 class="menuText">Blogs</h5>
+                 </a>
+             </li>
+             <li class="menuItem">
+                 <a  href="./contact.html" id="constantManagerBtn" class="menuOption">
+                     <i class="fas fa-border-all"></i><h5 class="menuText">Contact</h5>
                  </a>
              </li>
 
@@ -163,7 +174,7 @@
                  <div>
                    <img
                      src="./images/Main__img-1.png"
-                     class="Main__Img img-fluid"
+
                      alt="Main_img"
                    />
                  </div>
@@ -179,7 +190,8 @@
          </div>
          <div class="themeBar">
              <div>
-                 <button class="btn-toggle" type="button" id="dark-mode-toggle"><i class="fas fa-moon" id="fa-moon"></i><img src="./images/icons/light.svg" id="img-fluid" class="img-fluid mode__icon" alt="Modes"></button>
+                 <button class="btn-toggle" type="button" id="dark-mode-toggle"><i class="fas fa-moon" id="fa-moon"></i>
+                   <i class="fas fa-sun sun1" id="img-fluid" ></i></button>
              </div>
          </div>
      </div>
@@ -196,12 +208,11 @@
         />
 
         <div class="heading-jump ">
-        <h2  class='center jello' >
+        <h2  class='center jello hi'  style="padding-left: 300px;">
           <span>H</span>
-          <span>I</span>
+          <span>i</span>
           <span>,</span>
         </h2>
-
         <h2  class='center jello'>
         <span>I</span>
         <span>'</span>
@@ -255,7 +266,7 @@
       </div>
 
       <!-- TIME DATE TEMP -->
-      <div class="Time__Date__Temp wow fadeInUp">
+      <div class="Time__Date__Temp wow fadeInUp" style="position:absolute;left:100px;">
         <div class="partition">
           <span class="Time"></span>
           <span class="Format"></span>
